# pq-aggregate-spec

./: .gitignore  Anchor.toml  Cargo.toml  DEVELOPER_GUIDE.md  LICENSE  README.md  draft-causalguard-behavioral-00.md
.orchids/: orchids.json
artifacts/: ASSUMPTIONS.json
benches/: benchmark.rs  causal_logger_bench.rs  metadata_bench.rs  policy_evaluation_bench.rs  production_bench.rs
docs/: LIVE_DEMO_GUIDE.md  POLICY_SEMANTICS.md  RUNTIME_SECURITY_MODEL.md  SECURITY_MODEL.md
examples/: basic.rs
programs/causalguard_verifier/src/: lib.rs
scripts/: audit_setup.sh  dependency_audit.sh  deploy_verifier.sh  fund_devnet_wallet.sh  generate_coverage.sh
src/: circuit.rs  error.rs  lib.rs  types.rs  utils.rs  verifier.rs
src/adapters/: bridge.rs  cosmos.rs  ethereum.rs  mod.rs  solana.rs
src/adapters/bridge/: mod.rs  relayer.rs
src/adapters/ethereum/: faucet.rs  mod.rs  real_adapter.rs  verifier.sol
src/adapters/solana/: basic.rs  faucet.rs  mod.rs  real_adapter.rs  transfer.rs  wallet.rs
src/agents/: defi_guardian.rs  mod.rs
src/causal/: event.rs  logger.rs  merkle.rs  metadata.rs  mod.rs
src/core/: aggregation.rs  keygen.rs  mod.rs  signing.rs
src/hsm/: mod.rs  software_hsm.rs
src/nova/: behavioral_circuit.rs  circuit.rs  mod.rs  params.rs  prover.rs  unified_prover.rs
src/policy/: engine.rs  evaluator.rs  mod.rs  types.rs
src/runtime/: api.rs  blockchain_adapter.rs  mod.rs  orchestrator.rs  signature_orchestrator.rs  wallet_manager.rs
src/verifier/: unified.rs
tests/: causal_logger_tests.rs  cross_chain_bridge_tests.rs  integration_live.rs  metadata_integration_tests.rs  nova_behavioral_tests.rs  policy_engine_tests.rs  runtime_integration_tests.rs  solana_devnet_tests.rs
