[package]
name = "pq-aggregate"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["LogicCrafterDz"]
description = "Post-quantum threshold signatures via independent key aggregation (IACR ePrint xxxx/107115)"
license = "MIT"
repository = "https://github.com/LogicCrafterDz/pq-aggregate"
keywords = ["post-quantum", "threshold-signatures", "ml-dsa", "dilithium", "nova"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["sha3/std"]
alloc = []
nova = ["dep:nova-snark", "dep:bellpepper-core", "dep:bellpepper", "dep:ff", "dep:pasta_curves"]
compression = ["dep:miniz_oxide"]
runtime = ["dep:tokio"]
solana-devnet = [
    "dep:reqwest",
    "dep:bs58",
    "runtime",
    "std",
]
ethereum-sepolia = ["dep:ethers", "runtime"]

[dependencies]
# ML-DSA (Dilithium) - Level 3 (ML-DSA-65)

pqc_dilithium = { version = "0.2", default-features = false, features = ["mode3"] }

# Cryptographic primitives
sha3 = { version = "0.10", default-features = false }
merlin = "3.0"

# Error handling
thiserror = { version = "1.0", default-features = false }

# Compression (optional)
miniz_oxide = { version = "0.7", optional = true }

# HSM & Security
aes-gcm = "0.10"
pbkdf2 = "0.12"
bip39 = { version = "2.0", features = ["rand"] }
sha2 = "0.10"
subtle = "2.5"
hex = "0.4"

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Security: zeroize sensitive data on drop
zeroize = { version = "1.8", default-features = false, features = ["derive", "alloc"] }

# Random number generation
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }
getrandom = { version = "0.2" }
tokio = { version = "1.36", features = ["sync", "time", "macros", "rt", "rt-multi-thread"], optional = true }

# Nova dependencies (optional)
nova-snark = { version = "0.37", optional = true }
bellpepper-core = { version = "0.4", optional = true }
bellpepper = { version = "0.4", optional = true }
ff = { version = "0.13", optional = true }
pasta_curves = { version = "0.5", optional = true }

# Solana Devnet dependencies (optional)
# Note: Full solana-sdk has dependency conflicts with our crates.
# For the spec, we use a mock-based adapter. Production integration
# should use a separate workspace member with isolated dependencies.
reqwest = { version = "0.11", features = ["json"], optional = true }
bs58 = { version = "0.5", optional = true }

# Ethereum Sepolia dependencies (optional)
ethers = { version = "2.0", features = ["rustls", "ws"], optional = true }
# hex = { version = "0.4", optional = true } -> Moved to common

[dev-dependencies]


criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
tokio = { version = "1.36", features = ["sync", "time", "macros", "rt", "rt-multi-thread"] }

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "causal_logger_bench"
harness = false

[[bench]]
name = "policy_evaluation_bench"
harness = false

[[bench]]
name = "production_bench"
harness = false


[[example]]
name = "basic"
